[package]
name = "hidden_tb"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
once_cell = "1.15.0"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
image = "0.24.4"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
uiautomation = "0.6.4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
]
